fix: correct method name casing in AccountRepository and update database connection properties

--- a/safe-bank-backend/src/main/resources/application.properties
+++ b/safe-bank-backend/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 
-spring.datasource.url=jdbc:postgresql://ep-dark-base-a4003ls1-pooler.us-east-1.aws.neon.tech/safe-bank-db?sslmode=require
-spring.datasource.username=safe-bank-db_owner
-spring.datasource.password=npg_bV1UOMNT8IvH
+spring.datasource.url=jdbc:postgresql://localhost:5432/safe-bank-db
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
+api.security.token.secret=${JWT_SECRET:my-secret-key}
